# kyro

./: .gitignore  Cargo.toml  README.md  design.md
.github/workflows/: build.yml  rust.yml  style.yml
.undo/: %home%ben%repos%kyro%README.md
src/: ]  bible.rs  cli.rs  config.rs  lib.rs  main.rs  parse.rs  storage.rs  utils.rs
src/.undo/: %home%ben%repos%kyro%src%main.rs
src/bible/: book.rs  chapter.rs  mod.rs  paragraph.rs  passage.rs  verse.rs
src/cli/: query.rs  show.rs
