[package]
name = "kyro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = {version ="1.0", features = ["derive"]}
reqwest = {version = "0.11", features = ["blocking"]}
directories-next = "2.0.0"
anyhow = "1.0.43"
