[package]
name = "kyro"
version = "0.1.0"
edition = "2018"
authors = ["Ben Hunt <bnjmnhnt.git@gmail.com>"]
description = "Read the Bible on the command line"
repository = "https://github.com/BenGH28/kyro"
keywords = ["Bible", "Christianity", "Gospel"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = {version ="1.0", features = ["derive"]}
reqwest = {version = "0.11", features = ["blocking"]}
directories-next = "2.0.0"
anyhow = "1.0.43"
roxmltree = "0.14.1"
structopt = "0.3.23"
once_cell = "1.8.0"
