[package]
name = "kyro"
version = "0.1.0"
edition = "2018"
authors = ["Ben Hunt <bnjmnhnt.git@gmail.com>"]
description = "Read the Bible on the command line"
repository = "https://github.com/BenGH28/kyro"
keywords = ["Bible", "Christianity", "Gospel"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
chrono = "0.4.19"
serde = {version ="1.0", features = ["derive"]}
reqwest = {version = "0.11", features = ["blocking"]}
directories-next = "2.0.0"
anyhow = "1.0.43"
roxmltree = "0.14.1"
structopt = "0.3.23"
bytes = "1.1.0"
zip = "0.5"
toml = "0.5.8"
once_cell = "1.9.0"
pager = "0.16.0"

[dev-dependencies]
rstest = "0.12.0"
